fix: Response 객체 수정